update My Work section after completing lockdown date generator MVP

--- a/about.html
+++ b/about.html
@@ -48,7 +48,7 @@
                   joys of theatre, live music, museum displays, and much more. I completed a part-time master's degree in Arts Management, Policy and Practice, whilst also managing to attain several positions working as an administrator for classical music organisations. This saw me take part in exciting
                   projects such as the delivery of a world-class classical music festival and summer school for gifted musicians in the heart of the Lake District.
               </p>
-              <p id="thirdpara" class="biopara">Then, in April 2017, I joined Spektrix, a market-leading provider of ticketing, CRM and fundraising software primarily aimed at arts organisations. My initial position was working in their Support, Training and Consultancy (STC) department - helping clients with everyday use of the software and leading on longer-term data consultancy projects with them as well.
+              <p id="thirdpara" class="biopara">Then, in April 2017, I joined <a href="https://www.spektrix.com/">Spektrix</a>, a market-leading provider of ticketing, CRM and fundraising software primarily aimed at arts organisations. My initial position was working in their Support, Training and Consultancy (STC) department - helping clients with everyday use of the software and leading on longer-term data consultancy projects with them as well.
                   Whilst the responsibilities of this role were broad, it quickly became apparent that the areas in which I excelled were mentoring my fellow team members, driving internal initiatives to promote better company efficiency, and the many 'technical' aspects of the job. My proficiency in the former two was demonstrated by my promotion to a management
                   position after only 18 months at the company. This saw me lead a new team of consultants to become a unit that was even greater than the sum of its parts, whilst also developing high-profile initiatives to reshape how the department operated as the company continued to grow rapidly.
               </p>
@@ -57,9 +57,10 @@
                   me to take advantage of the company's excellent learning and development programmes and to start teaching myself more complex JavaScript on the job, whilst also setting up my own company initiative that saw the company's software engineers teach members of the STC team basic SQL.
               </p>
               <p id="fifthpara" class="biopara">After about 18 months working and thriving in my management position, I decided to make the most out of the working conditions made necessary by the Covid-19 pandemic and volunteered for full-time furlough from my position in June 2020. The purpose of this was to prepare to undertake full-time training in software development.
-                  As such, I signed up to study with NorthCoders, a provider of full-time, full stack software development bootcamps in the North of England, and completed my formal studies August 2020 - November 2020.
+                  As such, I signed up to study with <a href="https://northcoders.com/">NorthCoders</a>, a provider of full-time, full stack software development bootcamps in the North of England, and completed my formal studies August 2020 - November 2020. Here, I significantly built upon my JavaScript and SQL knowledge, utilising frameworks such as React and Express to build a portfolio of full stack projects. I also put into practice my knowledge of Agile working methods, frequently pair programming, working in sprints, using Kanban boards and much more. The course did what I had hoped - developed my knowledge and experience to the point where I was hireable as a junior developer, as well as giving me a network of like-minded individuals that I'll likely value for life.
+                  
               </p>
-              <p id="sixthpara" class="biopara">I have never taken to any line of work with as much enthusiasm, alacrity and enjoyment as exploring the art of coding. It combines the logical and creative sides of my brain in ways that I hadn't previously thought possible. I am thrilled to be pursuing a line of work that I am even more passionate about than the arts, and I cannot wait to see where it takes me next.
+              <p id="sixthpara" class="biopara">I have since attained a role as a Engineer with the prestigious <a href="https://www.bjss.com/">BJSS</a>, and am committed to continuing my client-facing experience in a more technical setting as I explore my new career. I'll write more about my experiences here or in a blog as I do so. I have never taken to any line of work with as much enthusiasm, alacrity and enjoyment as exploring the art of coding. It combines the logical and creative sides of my brain in ways that I hadn't previously thought possible. I am thrilled to be pursuing a line of work that I am even more passionate about than the arts, and I cannot wait to see where it takes me next.
               </p>
           <img id="bioicon1" src="./images/stave.jpg" alt="notes" />
           <img id="bioicon2" src="./images/laptop.png" alt="notes" />
@@ -68,8 +69,20 @@
       <h2 id="past_experience_header" style="text-align:center">Past Experience</h2>
       <ul id="past_experience">
         <div class="experience_wrapper_grow">
+          <li class="experience"><b>Graduate Engineer - BJSS</b></br>
+          March 2021 - Present</br>
+            <ul>
+              <li>Providing software consultancy of the highest standard to a broad range of clients from a wide range of industries.</li>
+              <li>Engineering software solutions - working with prototypes and proof of concepts and developing fully functioning applications using a range of languages and frameworks.</li>
+              <li>Undergoing training to develop skills in additional programming languages.</li>
+              <li>Working on internal development projects.</li>
+              <li>Upskilling myself to provide consultancy in AI, Data Science and more.</li>
+            </ul></li>
+        <img class="organisation_logo" src="./images/BJSS.svg" alt="spektrix_logo">
+      </div>
+        <div class="experience_wrapper_grow">
             <li class="experience"><b>Team Manager, Support and Training - Spektrix</b></br>
-            November 2018 - Present</br>
+            November 2018 - December 2020</br>
               <ul>
                 <li>Managing and mentoring a team of consultants in delivering world-class technical support and system consultancy for a state of the art ticketing platform, creating and fostering a team that is even greater than the sum of its parts.</li>
                 <li>Instigating and managing internal initiatives, such as reorganising team structures based on the changing demands of the rapidly-growing company.</li>
@@ -80,7 +93,7 @@
           <img class="organisation_logo" src="./images/spektrixlogo.jpg" alt="spektrix_logo">
         </div>
         <div class="experience_wrapper_grow">
-          <li class="grow"><b>Support and Training Consultant - Spektrix</b></br>
+          <li class="experience"><b>Support and Training Consultant - Spektrix</b></br>
             April 2017 - November 2018</br>
             <ul>
               <li>Providing technical support to clients using the company's market-leading ticketing platform, including: <ul>
@@ -96,7 +109,7 @@
           <img class="organisation_logo" src="./images/spektrixlogo.jpg" alt="spektrix_logo">
         </div>
         <div class="experience_wrapper_grow">
-          <li class="grow"><b>Freelance Administrator - Westmorland Youth Orchestra</b></br>
+          <li class="experience"><b>Freelance Administrator - Westmorland Youth Orchestra</b></br>
             September 2016 - December 2017</br>
           <ul>
             <li>Modernising the Orchestra's admin processes, such as the setup of a cloud storage system and updating their website with new content.</li>
@@ -106,7 +119,7 @@
           <img class="organisation_logo" src="./images/wyo_logo.png" alt="wyo_logo">
         </div>  
         <div class="experience_wrapper_grow">
-          <li class="grow"><b>Administrative Assistant - Lake District Summer Music</b></br>
+          <li class="experience"><b>Administrative Assistant - Lake District Summer Music</b></br>
             February 2015 - March 2017</br>
           <ul>
             <li>Providing administrative support in all areas supporting the production of a series of internationally-acclaimed classical music concerts, including venue liaison, website updating, box office work and finance work.</li>
