--- a/my_work.html
+++ b/my_work.html
@@ -44,20 +44,23 @@
             <div id="tech">
                 <h2 class="tech_skills_header">My Technologies</h2>
                 <div class="icon_skills_wrapper">
+                    <i class="devicon-html5-plain-wordmark colored"></i>
                     <i class="devicon-css3-plain-wordmark colored"></i>
+                    <i class="devicon-javascript-plain colored"></i>
+                    <i class="devicon-jquery-plain-wordmark colored"></i>
+                    <i class="devicon-nodejs-plain colored"></i>
+                    <i class="devicon-npm-original-wordmark colored"></i>
+                    <i class="devicon-react-original-wordmark colored"></i>
+                    <i class="devicon-gatsby-plain-wordmark colored"></i>
                     <i class="devicon-git-plain-wordmark colored"></i>
                     <i class="devicon-github-plain-wordmark colored"></i>
                     <i class="devicon-heroku-plain-wordmark colored"></i>
-                    <i class="devicon-html5-plain-wordmark colored"></i>
-                    <i class="devicon-javascript-plain colored"></i>
-                    <i class="devicon-jquery-plain-wordmark colored"></i>
                     <i class="devicon-linux-plain colored"></i>
-                    <i class="devicon-nodejs-plain colored"></i>
-                    <i class="devicon-npm-original-wordmark colored"></i>
                     <i class="devicon-postgresql-plain-wordmark colored"></i>
-                    <i class="devicon-react-original-wordmark colored"></i>
                     <i class="devicon-ubuntu-plain-wordmark colored"></i>
                     <i class="devicon-visualstudio-plain colored"></i>
+                    <i class="devicon-php-plain colored"></i>
+                    <i class="devicon-ruby-plain-wordmark colored"></i>
                 </div>
             </div>
             <div id="skills">
@@ -83,7 +86,7 @@
                 <div class="work_list">
                     <h4 class="project_title">This Website!</h4>
                     <div class="project_description">This website was an early project of mine, and was my first real use of CSS flex and grid functionality. It's still a living project;
-                        my plans are to utilise a CMS for the content, and to keep updating the design with any clever tricks I find.
+                        my plans are to utilise a CMS for the content, and to eventually redesign it using a framework such as React.
                     </div></br>
                     <a class="work_github_link" href="https://github.com/lancaster-coder1991/portfolio-website">GitHub repo</a> 
                 </div>
@@ -95,7 +98,7 @@
                     <div class="project_description">This project was one of the sprints I worked on during my time at NorthCoders, but which I have added a lot of my own functionality to.
                         It's centred around a Pokémon battle emulator game that can be run in a terminal using Node.js.
                         A frontend interface is in the works for this game as well.
-                        See the README on the GitHub for instructions on how to play!
+                        See the README on the GitHub repo for instructions on how to play!
                     </div></br>
                     <a class="work_github_link" href="https://github.com/lancaster-coder1991/Node-Pokemon-Battler">GitHub repo</a> 
                 </div>
