--- a/index.html
+++ b/index.html
@@ -40,11 +40,13 @@
     </nav>
     <main id="home_content" class="main_content">
       <p id="homebio">
-        I am a software developer currently based in the North-West of England. After a successful career in the arts sector delivering on many prolific projects such as a world-class classical music festival and summer school, I have discovered a love for coding and have turned to a career in software development!</br></br>
+        Hi there! I am a software developer and consultant based in the North-West of England. After a successful career in the arts sector, I discovered my love for code several years ago and have established a home for myself in the tech industry.<br><br>
 
-        I have always had a natural aptitude for both music and maths, and I believe these traits are part of the reason that I have been able to quickly understand the patterns and syntax that make up coding languages. My turn towards software development has been aided by my 3+ years experience working in a software company servicing the arts sector. The team at Spektrix encouraged me to learn to code on the job, and I was therefore been able to use my technical skills to drive success for the company's clients by delivering clever software solutions for everyday and bespoke issues.</br></br>
-        
-        I have now completed a full-time software development bootcamp with the award winning NorthCoders, as well as building a portfolio of personal projects. I am keen to hear about part- or full-time as a software developer working with any language, and I'm available to chat any time!</br></br>
+I have always had a natural aptitude for both music and maths, but before discovering coding I've never really known how to apply myself using these skills. I believe these traits are part of the reason that I have been able to quickly understand the patterns and syntax that make up coding languages. Coding allows me to simultaneously apply the creative and logical sides of my brain in a way that hadn't previously thought possible, which is incredibly empowering.<br><br>
+
+Now, I'm utilising my previous client-facing experience in a tech company with my more recently acquired skills in coding to provide digital consultancy work for prolific clients as a Graduate Engineer with the prestigious BJSS.<br><br>
+
+I'm always keen to chat to fellow developers and so please drop me a message if you need anything at all! I'm particularly keen to get involved with open source projects, attend conferences and meet other developers in person when such things are possible again, so if you're running something with which you want to get more developers involved then please drop me a line :)<br><br>
 
         <b>Please use the navigation bar to find out more!</b>
       </p>
